themes/binary/assets/scss/theme/_layout.scss
/* ... */
.header-section{
	background-color: #191A35;
	position: relative;
	.navbar-right{
		position: absolute;
		left: 25%;
		.nav-tabs{
			&:after{
				content:'';
				border-bottom: 0;
			}
		}
		@media (max-width: 991px){
			left: 30%;
		}
		@media (max-width: 767px){
			display: none;
		}
	}
	.user{
		span{
			img.notification{
				margin-left: 15px;
			}
		}
	}
}
.settings{
	background-color: #0F1226;
	box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.24);
	span{
		font-size: 20px;
		line-height: 27px;
		font-weight: 600;
		img.setting-icon{
		    margin-right: -15px;
		}
	}
}
.setting-wrapper{
	background-color: #0A0C1B;
	.form{
		&-data{
			background-color: #191a35;
			padding: 20px;
		    border-radius: 6px;
		    margin: 0 30px;
		    width: 100%;
		    .custom-control-label{
		    	font-size: 14px;
		    	line-height: 18px;
		    	color: #93949E;
		    	font-weight: bold;
	    	    padding-top: 4px;
    	        padding-left: 10px;
		    	&:before{
				    border-radius: 3px;
				    border-width: 1px;
				    border-color: #93949E;
				    background-color: transparent;
		    	}
	    	}
	    	.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before{
	    		background-color: transparent;
	    		border: 1px solid #93949E;
	    	}
	    	.options{
	    		margin-left: 40px;
	    	}
		}
		&-group{
			margin: 2rem 0;
			.btn{
			    border-width: 1px;
	    		padding: 6px 50px;
	    		font-size: 12px;
			    display: flex;
	    		align-items: center;
	    		&:hover{
	    			background: transparent;
	    		}
			}
			.margin-bottom{
				@media (max-width: 767px){
					margin-bottom: 20px;
				}
			}
		}
		&-control{
			border: 1px solid #5D5E72;
			border-radius: 2px;
			background: transparent;
			height: 36px;
			&:focus{
				background: transparent;
				box-shadow: none;
			}
		}
	}
	.action-block{
		@media (max-width: 767px){
			justify-content: center;
		}
	}
}

